hyperstream/src-tauri/check.txt
warning: profile package spec `boring` in profile `dev` did not match any packages

help: a package with a similar name exists: `boring2`
warning: profile package spec `boring-sys` in profile `dev` did not match any packages

help: a package with a similar name exists: `boring-sys2`
    Checking hyperstream v0.1.0 (C:\Users\aditya\Desktop\hdm\hyperstream\src-tauri)
warning: unused import: `tokio::sync::mpsc`
 --> src\network\p2p.rs:6:5
  |
6 | use tokio::sync::mpsc;
  |     ^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `WebSocketStream`
 --> src\network\p2p.rs:8:54
  |
8 | use tokio_tungstenite::{accept_async, connect_async, WebSocketStream, tungstenite::Message};
  |                                                      ^^^^^^^^^^^^^^^

warning: unnecessary parentheses around block return value
   --> src\network\chatops.rs:150:33
    |
150 | ...                   (d.downloaded_bytes as f64 / d.total_size as f64 * 100.0)
    |                       ^                                                       ^
    |
    = note: `#[warn(unused_parens)]` (part of `#[warn(unused)]`) on by default
help: remove these parentheses
    |
150 -                                 (d.downloaded_bytes as f64 / d.total_size as f64 * 100.0)
150 +                                 d.downloaded_bytes as f64 / d.total_size as f64 * 100.0
    |

warning: unused import: `PathBuf`
 --> src\archive_manager.rs:2:23
  |
2 | use std::path::{Path, PathBuf};
  |                       ^^^^^^^

warning: use of deprecated function `rand::thread_rng`: Renamed to `rng`
   --> src\network\p2p.rs:270:29
    |
270 |         let mut rng = rand::thread_rng();
    |                             ^^^^^^^^^^
    |
    = note: `#[warn(deprecated)]` on by default

error[E0061]: this function takes 7 arguments but 6 arguments were supplied
   --> src\plugin_vm\lua_host.rs:115:25
    |
115 |                 let _ = crate::start_download_impl(&app, state.inner(), id.clone(), url, filename, None).await;
    |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^------------------------------------------------------ argument #7 of type `std::option::Option<HashMap<std::string::String, std::string::String>>` is missing
    |
note: function defined here
   --> src\lib.rs:180:14
    |
180 | pub async fn start_download_impl(
    |              ^^^^^^^^^^^^^^^^^^^
...
187 |     custom_headers: Option<std::collections::HashMap<String, String>>
    |     -----------------------------------------------------------------
help: provide the argument
    |
115 |                 let _ = crate::start_download_impl(&app, state.inner(), id.clone(), url, filename, None, /* std::option::Option<HashMap<std::string::String, std::string::String>> */).await;
    |                                                                                                        ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

error[E0061]: this function takes 7 arguments but 6 arguments were supplied
   --> src\plugin_vm\lua_host.rs:133:25
    |
133 |                 let _ = crate::start_download_impl(&app, state.inner(), id.clone(), url, name.clone(), None).await;
    |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^---------------------------------------------------------- argument #7 of type `std::option::Option<HashMap<std::string::String, std::string::String>>` is missing
    |
note: function defined here
   --> src\lib.rs:180:14
    |
180 | pub async fn start_download_impl(
    |              ^^^^^^^^^^^^^^^^^^^
...
187 |     custom_headers: Option<std::collections::HashMap<String, String>>
    |     -----------------------------------------------------------------
help: provide the argument
    |
133 |                 let _ = crate::start_download_impl(&app, state.inner(), id.clone(), url, name.clone(), None, /* std::option::Option<HashMap<std::string::String, std::string::String>> */).await;
    |                                                                                                            ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

warning: unused variable: `p2p_node`
   --> src\lib.rs:329:9
    |
329 |     let p2p_node = state.p2p_node.clone();
    |         ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_p2p_node`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `id_clone`
   --> src\lib.rs:330:9
    |
330 |     let id_clone = id.clone();
    |         ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_id_clone`

error[E0061]: this function takes 3 arguments but 2 arguments were supplied
   --> src\lib.rs:995:18
    |
995 |     let client = network::masq::build_impersonator_client(network::masq::BrowserProfile::Chrome, Some(&proxy_config))
    |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^------------------------------------------------------------ argument #3 of type `std::option::Option<HashMap<std::string::String, std::string::String>>` is missing
    |
note: function defined here
   --> src\network\masq.rs:21:8
    |
 21 | pub fn build_impersonator_client(
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^
...
 24 |     custom_headers: Option<std::collections::HashMap<String, String>>
    |     -----------------------------------------------------------------
help: provide the argument
    |
995 |     let client = network::masq::build_impersonator_client(network::masq::BrowserProfile::Chrome, Some(&proxy_config), /* std::option::Option<HashMap<std::string::String, std::string::String>> */)
    |                                                                                                                     ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

warning: use of deprecated method `rand::Rng::gen_range`: Renamed to `random_range`
   --> src\network\p2p.rs:272:32
    |
272 |             .map(|_| WORDS[rng.gen_range(0..WORDS.len())])
    |                                ^^^^^^^^^

error[E0308]: mismatched types
   --> src\proxy.rs:159:9
    |
158 |     pub fn build_client(&self) -> Result<Client, String> {
    |                                   ---------------------- expected `Result<reqwest::Client, std::string::String>` because of return type
159 |         crate::network::masq::build_client(Some(self), None)
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `reqwest::Client`, found `rquest::Client`
    |
    = note: `rquest::Client` and `reqwest::Client` have similar names, but are actually distinct types
note: `rquest::Client` is defined in crate `rquest`
   --> C:\Users\aditya\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\rquest-5.1.0\src\client\http.rs:94:1
    |
 94 | pub struct Client {
    | ^^^^^^^^^^^^^^^^^
note: `reqwest::Client` is defined in crate `reqwest`
   --> C:\Users\aditya\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\reqwest-0.11.27\src\async_impl\client.rs:69:1
    |
 69 | pub struct Client {
    | ^^^^^^^^^^^^^^^^^

warning: variable does not need to be mutable
  --> src\mqtt_client.rs:58:14
   |
58 |         let (mut client, mut connection) = Client::new(mqttoptions, 10);
   |              ----^^^^^^
   |              |
   |              help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: value assigned to `i` is never read
  --> src\metadata_scrubber.rs:91:13
   |
91 |     let mut i = 0;
   |             ^
   |
   = help: maybe it is overwritten before being read?
   = note: `#[warn(unused_assignments)]` (part of `#[warn(unused)]`) on by default

Some errors have detailed explanations: E0061, E0308.
For more information about an error, try `rustc --explain E0061`.
warning: `hyperstream` (lib) generated 10 warnings
error: could not compile `hyperstream` (lib) due to 4 previous errors; 10 warnings emitted
